Fix select dropdown in Chrome and dark mode
The form controls with the .form-control CSS class have
background: transparent (as defined in Bootstrap's variables.less).

On Chrome, in dark mode, this causes <select> dropdowns to have
light text on light background. As a workaround, we set the
select.form-control background in base.css to the same color as panel
background.

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -336,3 +336,8 @@ input[type=number]::-webkit-inner-spin-button {
 .btn-primary {
     box-shadow: 0 5px 0 -3px rgba(34, 188, 102, 0.3);
 }
+
+/* Fix select dropdown in Chrome and dark mode  */
+select.form-control {
+    background-color: var(--panel-bg);
+}
